tmp/funnel-output_path-Dz5gxl84.tmp/client1/tests/unit/pods/errors/route-test.jshint.js
/home/ubuntu/workspace/tmp/jshinter-output_path-D6CGu5oj.tmp/unit/pods/errors/route-test.jshint.js